Fixed the alignment / I am not that great with css yet

--- a/style.css
+++ b/style.css
@@ -6,5 +6,6 @@ h1#timer {
     color: white;
     font-family: Alata;
     font-size: 200px;
-    padding-left: 27%;
+    text-align: center;
+    /* padding-left: 27%; */
 }
